# Health-Lab

./: Codebase Documentation Update.docx  Phase1Plan.md  README.md  pyproject.toml
docs/: Phase1Plan.md  README.md  master_hair_care_project.md  master_skin_care_project.md
docs/master_hair_care_project/: 0_overview.md  1_product_formulary.md  2_clinical_execution_grid.md  3_supply_cost_forecast.md  4_risk_escalation_rules.md  5_measurement_stats.md  6_backend_infra.md  7_implementation_delta.md  8_quick_start.md  README.md  main.md  outcome.md
docs/master_skin_care_project/: 0_overview.md  1_product_formulary.md  2_clinical_execution_grid.md  3_supply_cost_forecast.md  4_risk_escalation_rules.md  5_measurement_stats.md  6_backend_infra.md  7_implementation_delta.md  8_quick_start.md  README.md  main.md  outcome.md
